# Social-Foraging-in-Dynamic-Environments-Balancing-Information-Channels

./: .gitignore  3_channel_categories_driver.sh  3_channel_cpu_driver_itb.sh  3_channel_cpu_hpc_itb.sh  3_channel_param_exploration.py  README.md  download_and_merge_wandb_data.py  download_wandb_curves.py  ea_cpu_driver_itb.sh  ea_cpu_hpc_itb.sh  ea_gpu_driver_scioi.sh  ea_gpu_hpc_scioi.sh  optimize_environment_hpc.sh  plot_ea_adaptation.py  plot_ea_results.py  pyproject.toml  run_all_EA.sh  ssga_2_targets.py  ssga_2_targets.yaml  ssga_gpu_hpc_scioi.sh  submit_categories.py  submit_ea.py  submit_jobs_3_channel.py  submit_ssga_jobs.py  visualization.py
abm/: 3_channels_abm.yaml  3_channels_abm_exploration.py  agent.py  app.py  ea_evaluation.yaml  generate_videos.py  info_channels_ea.py  model.py  optimize_environment.py  optimize_environment.yaml  utils.py
tests/: test_agent.py  test_aggregation.py  test_bias.py  test_dynamic_evolution.py  test_env_switch.py  test_multi_spotlight_vectorized.py  test_plotting.py  test_private_spotlight_integration.py
